--- a/Assets/Editor/LevelDesigner/GraphWindow.uxml
+++ b/Assets/Editor/LevelDesigner/GraphWindow.uxml
@@ -6,11 +6,23 @@
         xsi:noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd"
 >
     <engine:VisualElement name="body">
-        <engine:VisualElement name="connections">
+        <engine:VisualElement name="canvas">
+            <engine:VisualElement name="connections"/>
+            <engine:VisualElement name="nodes"/>
+            <engine:VisualElement name="conn-start" class="port"/>
+            <engine:VisualElement name="conn-end" class="port"/>
         </engine:VisualElement>
-        <engine:VisualElement name="nodes">
+        <engine:VisualElement name="inspector">
+            <engine:VisualElement name="node-editor" class="data-editor">
+                <engine:Label text="编辑节点" class="field title2"/>
+                <engine:TextField name="node-name" class="field"/>
+                <editor:ToolbarMenu name="node-type" class="field"/>
+            </engine:VisualElement>
+            <engine:VisualElement name="connection-editor" class="data-editor">
+                <engine:Label text="编辑连接" class="field title2"/>
+                <editor:ToolbarMenu name="connection-type" class="field"/>
+            </engine:VisualElement>
         </engine:VisualElement>
-        <engine:VisualElement name="conn-start"/>
     </engine:VisualElement>
     <engine:VisualElement name="header">
         <engine:Button name="new-file" text="新建"/>
@@ -18,14 +30,4 @@
         <engine:Button name="save" text="保存"/>
         <engine:Button name="save-as" text="另存为"/>
     </engine:VisualElement>
-    <engine:VisualElement name="node-editor" class="data-editor">
-        <engine:Label text="编辑节点" class="field title2"/>
-        <engine:TextField name="node-name" class="field" />
-        <editor:ToolbarMenu name="node-type" class="field"/>
-    </engine:VisualElement>
-    <engine:VisualElement name="connection-editor" class="data-editor">
-        <engine:Label text="编辑连接" class="field title2"/>
-        <editor:ToolbarMenu name="connection-type" class="field"/>
-    </engine:VisualElement>
-
 </engine:UXML>
