rename node/ calculate stability factor

--- a/Assets/Editor/LevelDesigner/GraphWindow.uxml
+++ b/Assets/Editor/LevelDesigner/GraphWindow.uxml
@@ -29,6 +29,7 @@
         <engine:Button name="load" text="打开"/>
         <engine:Button name="save" text="保存"/>
         <engine:Button name="save-as" text="另存为"/>
+        <engine:Button name="stability" text="计算稳定因子"/>
         <engine:Label name="file-name"/>
     </engine:VisualElement>
 </engine:UXML>
